unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/iContactforSF__iContact_Clicked_Link__c.object-meta.xml
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelp</customHelpPage>
    <description>Holds a record of which links from a sent message have been clicked upon, and how often.</description>
    <label>iContact Clicked Link</label>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Clicked Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>