unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__Campaign__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the campaign.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>iContact Clicked Links</relationshipLabel>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>