unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__ClickedLink_ID__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__ClickedLink_ID__c</fullName>
    <description>External ID for iContact clicked link data. Composed of messageid_recipientid_linkhash.</description>
    <externalId>true</externalId>
    <label>ClickedLink_ID</label>
    <length>72</length>
    <type>Text</type>
</CustomField>