unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__Clicks__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Clicks__c</fullName>
    <description>Total number of clicks this link has received.</description>
    <inlineHelpText>Total number of clicks this link has received.</inlineHelpText>
    <label>Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>