unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__Contact__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this link's statistic was associated to a Contact record, this field points to that Contact.</description>
    <inlineHelpText>If this link's statistic was associated to a Contact record, this field points to that Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>iContact Clicked Links</relationshipLabel>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>