unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__Full_Link__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Full_Link__c</fullName>
    <description>The full length link that was clicked from an iContact Sent Message.</description>
    <label>Full Link</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>