unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__iContact_Message_Statistic__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__iContact_Message_Statistic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this record is tracking an individual's link clicks, this will point to their statistics record.</description>
    <inlineHelpText>If this record is tracking an individual's link clicks, this will point to their statistics record.</inlineHelpText>
    <label>iContact Message Statistic</label>
    <referenceTo>iContactforSF__iContact_Message_Statistic__c</referenceTo>
    <relationshipLabel>iContact Clicked Links</relationshipLabel>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <type>Lookup</type>
</CustomField>