unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__iContact_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__iContact_Sent_Message__c</fullName>
    <description>The message this link was contained within.</description>
    <inlineHelpText>The message this link was contained within.</inlineHelpText>
    <label>iContact Sent Message</label>
    <referenceTo>iContactforSF__iContact_Sent_Message__c</referenceTo>
    <relationshipLabel>iContact Clicked Links</relationshipLabel>
    <relationshipName>iContact_Clicked_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>