unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/iContactforSF__Unique_Clicks__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Unique_Clicks__c</fullName>
    <description>Total number of unique users who have clicked on this link at least once.</description>
    <inlineHelpText>Total number of unique users who have clicked on this link at least once.</inlineHelpText>
    <label>Unique Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>