unpackaged/main/default/objects/iContactforSF__iContact_Clicked_Link__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Heller DataMigration 2021</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>